# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain-games/: pyproject.toml
brain-games/brain_games/scripts/: brain_games.py
brain_games/: game_starter.py
brain_games/brain_games/games/: calc_game.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/games/: calc_game.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
hexlet-code/: pyproject.toml
hexlet-code/brain_games/scripts/: brain_games.py
