[tool.poetry]
name = "brain-code"
version = "0.1.0"
description = ""
authors = ["Alexandr221994 <alexandr.mityshkin1@gmail.com>"]
readme = "README.md"
packages = [
    {include = "brain_games"}
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.brain_games.scripts.brain_games:main"
brain-even = "brain_games.brain_games.scripts.brain_even:main"
brain-calc = "brain_games.brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.brain_games.scripts.brain_gcd:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
